Use rest template for acceptance tests